# LSM-Graphics

./: Cargo.toml  README.md  analysis.txt  epochs.txt  experiment.txt  guesses.txt  input.txt  input_old.txt  l2-guesses.txt  labels.txt  output.txt  readout.txt  train_labels.txt  trained_weights.txt  weights.txt
src/: analysis.rs  graphics.rs  input.rs  main.rs  main_gpu.rs
src/machine/: mod.rs  neuron.rs  utils.rs
