[package]
name = "lsm-graphics"
version = "0.1.0"
authors = ["RockLikeBusStop <arasam1067@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.24.1"
nalgebra = "0.21.1"
rand = "0.7.3"
rand_distr = "0.2.2"